feat: integrate AI service, routes, handlers, client

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ bin/
 .idea
 .env
 .vscode
+__pycache__/
+*.py[cod]
+*.pkl
+*.pt
+ai-service/venv/
+ai-service/__pycache__/
+ai-service/data/
+ai-service/models/
