--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -1,8 +1,13 @@
 fastapi==0.115.5
 uvicorn[standard]==0.32.0
 pydantic==2.9.2
+
 scikit-learn==1.5.2
+imbalanced-learn==0.12.3
+
 pandas==2.2.3
+numpy==1.26.4
 joblib==1.4.2
-numpy
-imbalanced-learn
+
+# Nếu file translator.py dùng requests để call NAVER
+requests==2.32.3
